fix: Correct issue with spacing when title is removed

--- a/src/components/FooterPage/FooterPage.module.scss
+++ b/src/components/FooterPage/FooterPage.module.scss
@@ -60,7 +60,7 @@
     display: none;
   }
 
-  .card {
-    margin-top: 66px;
+  .contentContainer {
+    padding-top: 66px;
   }
 }
