--- a/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/pages/AboutUs/AboutUs.module.scss
@@ -108,7 +108,7 @@
       padding-top: 40px;
 
       .card {
-        margin-top: 0;
+        margin-top: 20px;
       }
     }
   }
